--- a/human-erp/src/main/webapp/WEB-INF/views/common/bottom.jspf
+++ b/human-erp/src/main/webapp/WEB-INF/views/common/bottom.jspf
@@ -1,5 +1,14 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 
-    
-    
+<link href="/resources/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/resources/css/footer.css" rel="stylesheet">
+<script src="/resources/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/resources/vendor/jquery/jquery.min.js"></script>
+<body>
+
+
+
+</body>
+	
