--- a/human-erp/src/main/webapp/WEB-INF/views/common/head.jspf
+++ b/human-erp/src/main/webapp/WEB-INF/views/common/head.jspf
@@ -1,9 +1,76 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<c:set var = "rPath" value="${pageContext.request.contextPath}"/>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+
+<!DOCTYPE html>
+<html>
+<head>
+<link href="/resources/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/resources/css/common.css" rel="stylesheet" />
+<script src="/resources/vendor/jquery/jquery.min.js"></script>
+<script src="/resources/vendor/bootstrap/js/common.js"></script>
 <script src="/resources/js/AjaxUtil.js"></script>
 
 
 
+<script src="/resources/js/AjaxUtil.js"></script>
 
+<meta charset="UTF-8">
+
+<style>
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.main {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+</style>
+
+</head>
+<!-- <div class="sidenav">
+  <a href="home">Home</a>
+  <a href="/url/userinfo:signin">SignIn</a>
+  <a href="/url/userinfo:list">List</a> -->
+  
+</div>
+
+<body>
+
+
+
+</body>
+
+
+</html>
